会员中心-VIP会员收益页面图片调整

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -20,7 +20,10 @@
         </div>
         <img class="card-buy-img" :attr="{src:@data.imgUrl}" alt="">
         <section style="padding: 10px 0 5px 10px;">
-            <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 15px;">预存 {{@data.amount}}</div>
+            <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 15px;">
+                预存 {{@data.amount}}
+                <div class="bs-text-gold bs-text-smaller" style="float: right;" :on-tap="@goSafe">为什么会有这么高的奖励？</div>
+            </div>
             <div class="card-buy-item">
                 <div class="card-buy-left">
                     <div class="card-buy-circle bs-text-small">
