公益修改，增加公司跟捐

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -22,7 +22,7 @@
         <section style="padding: 10px 0 5px 10px;">
             <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 15px;">
                 预存 {{@data.amount}}
-                <div class="bs-text-gold bs-text-smaller" style="float: right;" :on-tap="@goSafe">为什么会有这么高的奖励？</div>
+                <div class="bs-text-gold bs-text-smaller" style="float: right;" :on-tap="@goSafe">会员卡预存款的安全性如何保障？</div>
             </div>
             <div class="card-buy-item">
                 <div class="card-buy-left">
