--- a/js/pages/card/safe.html
+++ b/js/pages/card/safe.html
@@ -4,7 +4,7 @@
     }    
 </style>
 
-<div class="introduce ms-controller" :controller="safe">
+<div class="introduce">
     <div>
         <div class="introduce-title">
             <div><img src="img/logo.jpg"></div>
