--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -1,6 +1,6 @@
-<div ms-controller="intro">
+<div class="ms-controller" :controller="intro">
     <div style="position: relative; height: 37vh;">
-        <img class="intro-back1" src="img/commonweal/back1.png">
+        <img class="intro-back1" src="../img/commonweal/back1.png">
         <div class="intro-title bs-text-small">
             <div>
                 我们不仅仅
@@ -18,7 +18,7 @@
     <div class="intro-content">
         <div :for="el in @data" :on-tap="@goDetail(el.id)" style="padding:10px 0 20px;">
             <div class="intro-text-red bs-text-smaller" :on-tap="@goDetail(el.id)">
-                <img class="intro-img-love" :on-tap="@goDetail(el.id)" :attr="{src: 'http://img.bensue.com/' + el.logoUrl}">
+                <img class="intro-img-love" :on-tap="@goDetail(el.id)" :attr="{src: urlAPINet + el.logoUrl}">
                 <span style="position: relative; top: -3px; margin-left: 5px;" :on-tap="@goDetail(el.id)"> {{el.cnName}}</span>
                 <div class="bs-text-x-smaller" :on-tap="@goDetail(el.id)">{{el.enName}}</div>
             </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="bs-text-x-smaller bs-text-102">
             以您个人名义，将推广奖励收入的15%捐赠
-            <br> 给指定的公益组织
+            <br> 给指定的公益组织，同时本宿将按照1.8:1的比例跟捐。
         </div>
         <div class="bs-text-smaller bs-text-gold" style="position: relative; bottom: -5vh;" :on-tap="@goRecord()">
             我的公益记录
@@ -41,7 +41,7 @@
         <br>
     </div>
     <div class="intro-footer bs-text-smaller bs-text-gold">
-        <img class="intro-img-love" src="img/commonweal/commonweal.png">
+        <img class="intro-img-love" src="../img/commonweal/commonweal.png">
         <span style="position: relative; top: -4px;">本宿公益</span>
     </div>
     <!-- modal -->
