订单优惠金额、实付金额bug修改

--- a/js/pages/commonweal/record.html
+++ b/js/pages/commonweal/record.html
@@ -1,4 +1,4 @@
-<div ms-controller="record" style="height: 100vh; background-color: white; padding: 30px 20px;">
+<div class="ms-controller" ms-controller="record" style="height: 100vh; background-color: white; padding: 30px 20px;">
     <div :if="@join">
         <div style="display: flex;justify-content: space-between;">
             <div class="bs-text-larger bs-text-normal">共累计捐赠
