--- a/js/pages/order/payend.html
+++ b/js/pages/order/payend.html
@@ -27,7 +27,7 @@
                 <br>
                 <span style=" margin-top: 8px;" ms-repeat-cl="el.orderCustomerList">{{cl.name}}&nbsp;</span>
                 <br>
-                <span class="bs-text-large bs-text-red" style="float: right; margin: 20px 15px 0 0;">¥{{el.amount}}</</span>
+                <span class="bs-text-large bs-text-red" style="float: right; margin: 20px 15px 0 0;">¥{{el.actualAmount}}</</span>
             </h5>
             <span style="clear: both;">&nbsp;</span>
         </li>
