--- a/js/pages/card/promotion.html
+++ b/js/pages/card/promotion.html
@@ -37,7 +37,7 @@
         </div>
         <div class="swiper-slide">
             <div style="background-image: url(img/promotion_5.png);">
-               <div style="height: 100px; background-color: transparent; position: fixed; bottom: 0;" onclick="location.href='card-list.html'"></div>
+               <div class="bs-bg-red bs-text-white bs-text-x-larger" style="height: 60px;line-height: 60px; position: fixed; bottom: 0;" onclick="location.href='card-list.html'">立即认购</div>
             </div>
         </div>
     </div>
