中奖记录弹窗增加 加载更多按钮

--- a/js/pages/card/lottery-log.html
+++ b/js/pages/card/lottery-log.html
@@ -15,4 +15,5 @@
             <span class="bs-text-small bs-text-153">{{el.createTime}}</span>
         </div>
     </div>
+    <button ms-if="showLoadmore" ms-click="getList" ms-class="bs-text-white bs-bg-black" style="width: 100%;margin-top: 15px">加载更多</button>
 </div>
