发现页面增加 退出当前登录账号功能

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -88,3 +88,13 @@
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
 </section>
+
+<section ms-controller="discover">
+    <div class="row" ms-click="logOff">
+        <img src="../img/discover/commonweal.png" class="item-img">
+        <div class="item-text">
+            退出当前账号
+        </div>
+        <img src="../img/icon/right-arrow.svg" class="arrow">
+    </div>
+</section>
