发现页面退出账号功能修改

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -89,7 +89,7 @@
     </div>
 </section>
 
-<section ms-controller="discover">
+<section ms-controller="discover" ms-if="isLogin==1">
     <div class="row" ms-click="logOff">
         <img src="../img/discover/commonweal.png" class="item-img">
         <div class="item-text">
