--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -38,20 +38,12 @@
             </div>
 
             <div style="display: flex; justify-content: space-around;width: 100%;">
-                <div>
-                    <div :if="el.accountAmount>0" class="bs-text-larger bs-text-gold">
-                        {{el.totalReturnAmount}}
-                    </div>
-                    <div :if="el.accountAmount==0" class="bs-text-larger bs-text-gold" :on-tap="@goCardList">
-                        去充值
-                    </div>
-                    <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
-                        返现累计
-                    </div>
-                </div>
                 <div :if="el.id>0" >
                     <div :if="el.packageStatus==2" class="bs-text-larger bs-text-gold">
-                        {{el.totalAwardAmount}}
+                        {{el.totalAwardAmount + el.totalReturnAmount}}
+                    </div>
+                    <div :if="el.packageStatus==0||el.accountAmount==0" class="bs-text-larger bs-text-gold" :on-tap="@goCardList">
+                        去升级
                     </div>
                     <div :if="el.packageStatus==1||el.accountAmount==0" class="bs-text-larger bs-text-gold" :on-tap="@goPromotion(index)">
                         去开通
