av2文件更新，相应页面测试并调整

--- a/js/pages/about.html
+++ b/js/pages/about.html
@@ -32,11 +32,11 @@ body {
 <!-- Swiper -->
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image:url(img/about_1.jpg)">
+        <div class="swiper-slide" style="background-image:url(img/discover/about_1.jpg)">
         </div>
-        <div class="swiper-slide" style="background-image:url(img/about_2.jpg)">
+        <div class="swiper-slide" style="background-image:url(img/discover/about_2.jpg)">
         </div>
-        <div class="swiper-slide" style="background-image:url(img/about_3.jpg)">
+        <div class="swiper-slide" style="background-image:url(img/discover/about_3.jpg)">
         </div>
     </div>
     <!-- Add Pagination -->
