--- a/js/pages/commonweal/commonweal-pop.html
+++ b/js/pages/commonweal/commonweal-pop.html
@@ -1,13 +1,13 @@
 <style>
-    .button {
-        width: 40vw; 
-        height: 50px; 
-        border-color: #ddd;
-        border-radius: 0;
-        border-left: none;
-    }
+.button {
+    width: 40vw;
+    height: 50px;
+    border-color: #ddd;
+    border-radius: 0;
+    border-left: none;
+}
 </style>
-<div ms-controller="detailPop" style="width: 80vw;">
+<div id="modal-text-content" ms-controller="detailPop" style="width: 80vw;">
     <div class="bs-text-smaller" style="text-align: center; padding: 12px 5vw 0;">
         <div>帮助他人改变命运</div>
         <div style="margin-top: 3px;">你有权让自己独一无二</div>
