--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div :if="!@join">
-        <button class="detail-button" :on-tap="@openPop()">确认捐赠</button>
+        <button class="detail-button" :click="@openPop()">确认捐赠</button>
     </div>
     <!-- modal -->
     <!-- 弹窗 -->
