--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div style="margin: 4vh 30px 3vh 30px;">
-            <button class="intro-button bs-text-larger" :on-tap="@open">马上捐赠</button>
+            <button class="intro-button bs-text-larger" :click="@open">马上捐赠</button>
         </div>
         <div class="bs-text-x-smaller bs-text-102">
             以您个人名义，将推广奖励收入的15%捐赠
