--- a/js/pages/lottery/prizeModal.html
+++ b/js/pages/lottery/prizeModal.html
@@ -1,4 +1,4 @@
-<div ms-controller="lottery">
+<div id="modal-text-content" ms-controller="lottery">
     <section style="height: 38px;text-align: right;border-top-right-radius: 20px;border-top-left-radius: 20px;" class="bs-bg-yellow">
         <div class="modal-close" ms-click="modalClose"></div>
     </section>
