--- a/js/pages/promotion/promotion-rule.html
+++ b/js/pages/promotion/promotion-rule.html
@@ -1,4 +1,4 @@
-<div class="content-rule">
+<div id="modal-text-content" class="content-rule">
     <div class="content-headtitle">推广奖励条例</div>
     <div class="content-title">第一条 活动规则</div>
     <div class="content-text">1. 
