--- a/js/pages/promotion/detail.html
+++ b/js/pages/promotion/detail.html
@@ -46,8 +46,8 @@
                     <div :if="!@isNormal">
                         <div class="bs-text-larger bs-text-gold bs-text-bolder">收入</div>
                         <div class="promotion-detail-content">
-                            <div>年收入&nbsp; <span class="bs-text-gold">¥{{el.totalAward + el.userBuyCard.monthReturnAmount*12}}</span></div>
-                            <div>月收入&nbsp; <span class="bs-text-gold">¥{{el.monthAward + el.userBuyCard.monthReturnAmount}}</span></div>
+                            <div>年收入&nbsp; <span class="bs-text-gold">¥{{el.totalAward + el.userBuyCard.monthReturnAmount*12|number(0)}}</span></div>
+                            <div>月收入&nbsp; <span class="bs-text-gold">¥{{el.monthAward + el.userBuyCard.monthReturnAmount|number(0)}}</span></div>
                             <div>本收入为本宿品牌推广奖励，请按时发布本宿推广内容。</div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                     
                     <div :if="!@isNormal" style="order: 2;position: relative;bottom: 62vh;height: 0;">
                         <div class="bs-text-xx-larger bs-text-gold" style="padding-bottom: 10px;">
-                            ¥ {{el.totalAward + el.userBuyCard.monthReturnAmount*12}}
+                            ¥ {{el.totalAward + el.userBuyCard.monthReturnAmount*12|number(0)}}
                         </div>
                         <div class="bs-text-normal bs-text-white">年推广奖励
                         </div>
@@ -83,7 +83,7 @@
                         <div :if="!@isNormal" style="text-align:left;width:150px;margin: 20px auto;">
                             <div style="display: flex;align-items: center;margin-bottom: 10px;">
                                 <img src="../img/card/task-level1.png" alt="" style="width: 24px;margin-right: 5px;">
-                                <div>本月推广奖励 ¥{{el.monthAward+ el.userBuyCard.monthReturnAmount}}</div>
+                                <div>本月推广奖励 ¥{{el.monthAward+ el.userBuyCard.monthReturnAmount|number(0)}}</div>
                             </div>
                             <div style="display: flex;align-items: center;">
                                 <img src="../img/card/task-level2.png" alt="" style="width: 24px;margin-right: 5px;">
@@ -94,20 +94,22 @@
                             本月推广
                         </div>
                         <div style="display: flex;justify-content: center;">
-                            <div :class="['promotion-btn',@taskList[index][0]?'promotion-done':'promotion-undo']" :on-tap="@complete(index, 0)">{{@taskList[index][0]?'完成':(@list[index].monthShareTimes>0?'待':'推')}}</div>
-                            <div :class="['promotion-btn',@taskList[index][1]?'promotion-done':'promotion-undo']" :on-tap="@complete(index, 1)">{{@taskList[index][1]?'完成':(@list[index].monthShareTimes>1?'待':'推')}}</div>
-                            <div :class="['promotion-btn',@taskList[index][2]?'promotion-done':'promotion-undo']" :on-tap="@complete(index, 2)">{{@taskList[index][2]?'完成':(@list[index].monthShareTimes>2?'待':'推')}}</div>
-                            <div :class="['promotion-btn',@taskList[index][3]?'promotion-done':'promotion-undo']" :on-tap="@complete(index, 3)">{{@taskList[index][3]?'完成':(@list[index].monthShareTimes>3?'待':'推')}}</div>
+                            <div :class="['promotion-btn',(@taskList[index][0]?'promotion-done':'promotion-undo')]" :on-tap="@complete(index, 0)">{{@taskList[index][0]?'完成':(@list[index].monthShareTimes>0?'待':'推')}}</div>
+                            <div :class="['promotion-btn',(@taskList[index][1]?'promotion-done':'promotion-undo')]" :on-tap="@complete(index, 1)">{{@taskList[index][1]?'完成':(@list[index].monthShareTimes>1?'待':'推')}}</div>
+                            <div :class="['promotion-btn',(@taskList[index][2]?'promotion-done':'promotion-undo')]" :on-tap="@complete(index, 2)">{{@taskList[index][2]?'完成':(@list[index].monthShareTimes>2?'待':'推')}}</div>
+                            <div :class="['promotion-btn',(@taskList[index][3]?'promotion-done':'promotion-undo')]" :on-tap="@complete(index, 3)">{{@taskList[index][3]?'完成':(@list[index].monthShareTimes>3?'待':'推')}}</div>
                         </div>
-                        <div :if="!el.currentMonthPlan.isFinished" style="margin-top: 20px;" class="bs-text-large">
+                        <div :if="!el.currentMonthPlan.isFinished" style="margin-top: 5px;" class="bs-text-smaller">
                             第{{el.currentMonthPlan.monthNo}}期推广时间为
                             <br>
                             {{el.currentMonthPlan.startTime.slice(0,10)}} 到 {{el.currentMonthPlan.endTime.slice(0,10)}}
                         </div>
-                        <div :if="el.currentMonthPlan.isFinished&&el.currentMonthPlan.monthNo<12" style="margin-top: 20px;" class="bs-text-large">
-                            第{{el.currentMonthPlan.monthNo+1}}期推广时间为
+                        <div :if="el.currentMonthPlan.isFinished&&el.currentMonthPlan.monthNo<12" style="margin-top: 5px;" class="bs-text-smaller">
+                            第{{el.currentMonthPlan.monthNo+1|number(0)}}期推广时间为
                             <br>
-                            {{el.currentMonthPlan.endTime.slice(0,10)}} 到 {{calDates(el.currentMonthPlan.endTime, 30).slice(0,10)}}
+                            {{el.currentMonthPlan.endTime.slice(0,10)}} 
+                            到 
+                            {{@calDates(el.currentMonthPlan.endTime, 30).slice(0,10)}}
                         </div>
                     </div>
                     
