--- a/js/util/code.html
+++ b/js/util/code.html
@@ -28,7 +28,7 @@
         border: 1px solid #baa071;
     }
 </style>
-<div class="pop-content bs-text-51" :controller="code">
+<div id="modal-text-content"  class="pop-content bs-text-51" :controller="code">
     <div style="padding: 20px;text-align: center;">
         <div style="text-align: right;">
             <img src="img/close.svg" style="width: 15px;" alt="" :on-tap="@close">
