会员介绍页面数字显示bug修改

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -39,7 +39,7 @@
                         <div style="margin-left: 10px;">
                             预定酒店
                             <br>
-                            <span class="card-buy-right-down bs-text-red">{{round(@data.discount*10,1)}}折</span>
+                            <span class="card-buy-right-down bs-text-red">{{@round(@data.discount*10, 1)}}折</span>
                         </div>
                     </div>
                     <div class="card-buy-con3">
