--- a/js/pages/promotion/detail.html
+++ b/js/pages/promotion/detail.html
@@ -34,7 +34,7 @@
                     <div>
                         <div class="bs-text-larger bs-text-gold bs-text-bolder">推广内容</div>
                         <div class="promotion-detail-content">
-                            每月转发<span class="bs-text-gold">{{numToHan(el.monthShareTimes)}}次</span>以上本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己创作编辑。
+                            每月转发<span class="bs-text-gold">{{el.monthShareTimes}}次</span>以上本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己创作编辑。
                         </div>
                     </div>
                     <div :if="!@isNormal">
