--- a/js/pages/promotion/share.html
+++ b/js/pages/promotion/share.html
@@ -1,3 +1,3 @@
 <div ms-controller="share" class="ms-controller">
-    <iframe :attr="{src:(@data.src)}" style="height: 100vh; width: 100vw;border: none;"></iframe>
+    <iframe :attr="{src: @data.pcUrl + '?id=' + @data.id}" style="height: 100vh; width: 100vw;border: none;"></iframe>
 </div>
