bug 修复： 1 支付方式看不到微信了 功能修改： 1 推广比例改成动态的 2 房间订单使用支付宝支付时，使用和会员卡支付一样的页面 3 推广分享页面添加遮罩提示 4 推广分享支持站内页面

--- a/js/pages/promotion/detail.html
+++ b/js/pages/promotion/detail.html
@@ -46,7 +46,7 @@
                     <div :if="!@isNormal">
                         <div class="bs-text-larger bs-text-gold bs-text-bolder">收入</div>
                         <div class="promotion-detail-content">
-                            <div>年收入&nbsp; <span class="bs-text-gold">¥{{el.totalAward + el.userBuyCard.monthReturnAmount*12)}}</span></div>
+                            <div>年收入&nbsp; <span class="bs-text-gold">¥{{@round(el.totalAward+el.userBuyCard.monthReturnAmount*12, 0)}}</span></div>
                             <div>月收入&nbsp; <span class="bs-text-gold">¥{{@round(el.monthAward+el.userBuyCard.monthReturnAmount, 0)}}</span></div>
                             <div>本收入为本宿品牌推广奖励，请按时发布本宿推广内容。</div>
                         </div>
