--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -31,7 +31,7 @@
             <button class="intro-button bs-text-larger" :click="@open">马上捐赠</button>
         </div>
         <div class="bs-text-x-smaller bs-text-102">
-            以您个人名义，将推广奖励收入的15%捐赠
+            以您个人名义，将推广奖励收入的{{@rate}}%捐赠
             <br> 给指定的公益组织，同时本宿将按照1.8:1的比例跟捐。
         </div>
         <div class="bs-text-smaller bs-text-gold" style="position: relative; bottom: -5vh;" :on-tap="@goRecord()">
