bug修复: 1 公益捐赠、中奖弹窗显示不正常：它们的遮罩样式被提到 common.css 中的 mask 影响了，修改推广分享和支付宝跳转页面的遮罩样式名字 mask -> mask-fullscreen 2 公益介绍页面的公益组织图标不显示：2.2 av不能在指令中直接引用全局变量，需要先声明 urlAPINet 到 vm 中

--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -18,7 +18,7 @@
     <div class="intro-content">
         <div :for="el in @data" :on-tap="@goDetail(el.id)" style="padding:10px 0 20px;">
             <div class="intro-text-red bs-text-smaller" :on-tap="@goDetail(el.id)">
-                <img class="intro-img-love" :on-tap="@goDetail(el.id)" :attr="{src: urlAPINet + el.logoUrl}">
+                <img class="intro-img-love" :on-tap="@goDetail(el.id)" :attr="{src: @urlAPINet + el.logoUrl}">
                 <span style="position: relative; top: -3px; margin-left: 5px;" :on-tap="@goDetail(el.id)"> {{el.cnName}}</span>
                 <div class="bs-text-x-smaller" :on-tap="@goDetail(el.id)">{{el.enName}}</div>
             </div>
