--- a/js/pages/promotion/share.html
+++ b/js/pages/promotion/share.html
@@ -1,5 +1,5 @@
 <div ms-controller="share" class="ms-controller">
-    <div class="mask bs-text-white" :if="@isShowMask" :click="@maskHide">
+    <div class="mask-fullscreen bs-text-white" :if="@isShowMask" :click="@maskHide">
         <img src="../img/icon/arrow-top-right.svg" style="width: 30px;">
         <div class="bs-text-larger" style="padding-top: 30px;line-height: 25px;">
             请点击右上角
