--- a/js/util/alipay.html
+++ b/js/util/alipay.html
@@ -1,5 +1,5 @@
 <div ms-controller="pay" style="padding: 20px;background-color: #fff;height: 100vh;">
-    <div class="mask bs-text-white" ms-if="isShowMask">
+    <div class="mask-fullscreen bs-text-white" ms-if="isShowMask">
         <img src="img/icon/arrow-top-right.svg" style="width: 30px;">
         <div class="bs-text-larger" style="padding-top: 30px;line-height: 25px;">
             请点击右上角
