推广页面修改;退出账号换位置

--- a/js/pages/promotion/share.html
+++ b/js/pages/promotion/share.html
@@ -1,14 +1,14 @@
 <div ms-controller="share" class="ms-controller">
-    <div class="mask-fullscreen bs-text-white" :if="@isShowMask" :click="@maskHide">
-        <img src="../img/icon/arrow-top-right.svg" style="width: 30px;">
-        <div class="bs-text-larger" style="padding-top: 30px;line-height: 25px;">
-            请点击右上角
-            <br> 
-            分享到朋友圈
-            <br>
-            完成推广任务
+    <div class="mask-fullscreen bs-text-white" :if="@isShowMask" :click="@maskHide" style="padding-right: 3vw;">
+        <img src="../img/icon/arrow_top.gif" style="width: 30px;">
+        <div class="bs-text-larger" style="position: relative;padding-top: 3vh;line-height: 25px;">
+            <div>
+                <img src="../img/icon/share_friends.png" style="position: relative;width: 18px;top: 3px;"> 分享到朋友圈
+            </div>
+            <div>
+                完成推广任务
+            </div>
         </div>
-        <div :click="@maskHide" class="bs-text-large" style="padding-top: 35px;">关闭 <br></div>
     </div>
     <iframe :attr="{src: @data.pcUrl + '?id=' + @data.id}" style="height: 100vh; width: 100vw;border: none;"></iframe>
 </div>
