--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -115,6 +115,13 @@
 				</a>
 			</li>
 		</ul>
+		<ul class="mui-table-view" style="margin-top: 50px" ms-if="isLogin==1" ms-click="logOff">
+			<li class="mui-table-view-cell">
+				<a class="mui-navigate-right">
+					<span class="bs-text-gray nav-title">退出当前账号</span>
+				</a>
+			</li>
+		</ul>
 		<div class="mui-content-padded mui-text-center" style="margin-top: 25px">
 			客服电话： <a ms-attr-href="'tel:'+SERVICECALL">{{SERVICECALL}}</a>
 		</div>
