购卡页面显示时间；房间筛选暂存在session

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -3,9 +3,9 @@
     <div class="card-frame">
         <div class="card-font" style="height: 0;">
             <div class="card-cardNo">
-                <span>{{getToday('date').slice(0,4)}}</span>
-                <span>{{getToday('date').slice(5,7)}}
-                {{getToday('date').slice(8,10)}}</span>
+                <span>{{@getToday('date').slice(0,4)}}</span>
+                <span>{{@getToday('date').slice(5,7)}}
+                {{@getToday('date').slice(8,10)}}</span>
                 <span>*****</span>
             </div>
             <br>
