梳理邀请好友注册相关页面，改名，优化代码 增加邀请好友称为VIP页面，对接接口 约会基金页面改名 wallet->coupon

--- a/js/pages/invite/user-invite-rule.html
+++ b/js/pages/invite/user-invite-rule.html
@@ -21,7 +21,7 @@
         <ol>
             <li>
                 任何人都可以邀请好友
-                <p>任何用户登录INI后都可以邀请朋友免费赚取约会基金， 不需要在INI进行消费</p>
+                <p>任何用户登录本宿后都可以邀请朋友免费赚取约会基金， 不需要在本宿进行消费</p>
             </li>
             <li>
                 获得和兑换约会优惠
@@ -31,8 +31,9 @@
             <li>多个邀请</li>
             <li>时间性
                 <p>我们有权暂停您的账户并删除邀请以确保不出现滥用 该服务。</p>
-                <p>只有完成的消费，才会有约会基金 该活动旨在有限的时间内有效，后续会进行调整。</p>
-                <p>在进行多个好友邀请时，在该链接进入INI并登陆后，你 将会获得约会基金。</p>
+                <p>只有完成的消费，才会有约会基金。
+                该活动只在有限的时间内有效，后续会进行调整。</p>
+                <p>在进行多个好友邀请时，在好友通过该链接进入本宿并登陆后，你将会获得约会基金。</p>
             </li>
         </ol>
     </div>
